# mindwell

./: .env.dev.backup  .env.example  .env.production  .gitignore  KNOWLEDGE_GRAPH.md  PROJECT_SUMMARY.md  README.md  REMEDIATION_PLAN.md  REMEDIATION_REPORT.md  RISK_ASSESSMENT.md  auth.py  base.py  community.py  config.py  conversation.py  dependencies.py  deploy-certs.sh  deploy.sh  docker-compose.app.yml  docker-compose.cloud.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  init-server.sh  main.py  package-lock.json  quick-deploy.sh  restore.sh  router.py  session.py  setup-ssl.sh  user.py
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_user_memories.py  003_enable_rls.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: assessment.py  auth.py  community.py  dialogue.py  memories.py  mood.py  night.py
backend/app/db/: init_db.py  redis.py  seed.py  session.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  assessment.py  base.py  community.py  conversation.py  mood.py  user.py  user_memory.py
backend/app/schemas/: assessment.py  auth.py  community.py  dialogue.py  memory.py  mood.py  user.py
backend/app/services/: assessment_service.py  auth_service.py  community_service.py  dialogue_service.py  memory_service.py  mood_service.py
backend/tests/: conftest.py  test_auth.py  test_dialogue.py  test_mood.py  test_safety.py
docs/: bmad-prd.md  (+5 more)
(+138 files in other folders)
